# shuestand

./: .gitignore  CHANGELOG.md  README.md
backend/: Cargo.toml
backend/migrations/: 20260319150000_baseline.sql  20260320104500_deposit_mint_worker.sql  20260320143000_onchain_wallet_postgres.sql  20260322093000_withdrawal_swap.sql  20260323062500_withdrawal_payment_request.sql  20260324083000_ledger_views.sql  20260324133000_operator_archive.sql  20260324142000_deposit_pickup.sql  20260327100000_sessions.sql  20260401113500_operation_mode.sql  20260401183000_deposit_claims.sql  20260401194000_session_fk_on_delete.sql  20260403194000_transaction_counter.sql  20260413105000_security_events.sql  20260416074000_deposit_received_sats.sql  20260426143000_support_messages.sql  20260426182000_support_cases.sql
backend/src/: address.rs  cashu.rs  config.rs  db.rs  fees.rs  http.rs  lib.rs  main.rs  operations.rs  telemetry.rs  transactions.rs
backend/src/onchain/: mod.rs  postgres_db.rs
backend/src/wallet/: mod.rs  multi.rs  swap.rs
backend/src/workers/: deposit.rs  withdrawal.rs
docs/: ENVIRONMENT_SETUP_AND_TUNING.md  api.md  development_notes.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tmp-decode.mjs  vite.config.ts
frontend/src/: App.css  App.tsx  KioskApp.tsx  OperatorApp.tsx  SupportApp.tsx  config.ts
infra/docker/: backend.Dockerfile  backend.env.example  docker-compose.yml  frontend.Dockerfile  nginx.conf
marketing/: build_a4_8up.py  shuestand-flyer-de-a6.html
tests/: proxyTest_burst.sh  proxyTest_rate_limits.sh
(+10 files in other folders)
